...

    <string name="maths_text">Maths</string>
    <string name="english_text">English</string>
    <string name="geography_text">Geography</string>


    <string name="math_level">0%</string>
    <string name="english_level">0%</string>
    <string name="geography_level">0%</string>


    <string name="quiz_unit_title">Quiz units</string>
    <string name="T1_Topic">T1.Topic</string>
    <string name="T1_Topic_title_1">Subtopic</string>
    <string name="T1_Topic_description">Description of the subtopic</string>
    <string name="T1_Topic_solve_button">Solve!</string>
    <string name="T1_Topic_practise_button">Practice!</string>


    <string name="T2_Topic">T2.Topic</string>
    <string name="T2_Topic_title_1">Subtopic</string>
    <string name="T2_Topic_description">Description of the subtopic</string>
    <string name="T2_Topic_solve_button">Solve!</string>
    <string name="T2_Topic_practise_button">Practice!</string>
    

    <string name="t1_solve_option">1</string>
    <string name="t2_solve_option">2</string>


...
    <string name="log_out_button">Log out</string>
    <string name="log_out_icon_description">log out icon</string>

    <string name="hint_activity_title">Hint</string>
    <string name="yes_cheat_button_text">Yes</string>
    <string name="no_cheat_button_text">No</string>
    <string name="confirmation_cheat">Are your sure?</string>ç
    <string name="confirmation_info_cheat">The hint could be true or false. Either way you will lose some XP</string>
    <string name="return_to_question_button_text">Return to question!</string>
    <string name="empty_string">"????"</string>

    <string name="final_quiz_activity_title">Quiz End</string>
    <string name="gold_medal_description">Medalla de final de quiz (posibilidad de que sea sliver o bronce)</string>
    <string name="earned_display">You earned 40 xp!</string>
    <string name="xp_left_to_next_level">You need 1300xp to reach level 3!</string>
    <string name="return_home_button">Return to home</string>
    <string name="level_display_final_quiz">Level 0</string>

    <string name="quiz_screen_title">Example Quiz</string>
    <string name="question_number_text">Question 1</string>
    <string name="question_text">Question text</string>
    <string name="option1_text">Option 1</string>
    <string name="option2_text">Option 2</string>
    <string name="option3_text">Option 3</string>
    <string name="correct_text">Correct</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="hint_button_text">Hint</string>
    <string name="next_button_text">Next</string>
    <string name="quests_unit_title">Quests</string>

    <string name="registro_screen_title">Sign up</string>
    <string name="registro_username_text">Username</string>
    <string name="registro_password_text">Password</string>
    <string name="registro_correo_text">Email</string>
...
