...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_header_relativelayout"
            />

        <TextView
            android:id="@+id/question_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textColor="@color/colorGray"
            android:textSize="24sp"
...
            android:textSize="24sp"
            android:text="@string/question_text"
            android:textColor="@color/colorBlack"
            tools:text="Question X"/>

        <Button
            android:id="@+id/option1_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
...
            android:tag="1"
            android:onClick="onOptionButtonClicked"
            android:background="@drawable/button_selector"
            tools:text="first option" />

        <Button
            android:id="@+id/option2_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
...
            android:tag="2"
            android:onClick="onOptionButtonClicked"
            android:background="@drawable/button_selector"
            tools:text="second option" />

        <Button
            android:id="@+id/option3_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:onClick="onOptionButtonClicked"
...
            android:tag="3"
            android:textColor="#FFFF"
            android:background="@drawable/button_selector"
            tools:text="third option" />

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
...
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replyTextView">

            <Button
                android:id="@+id/cheatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/hint_button_text"
                android:textColor="#FFFF"
                android:background="@drawable/button_selector"
...
            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/next_button_text"
                android:onClick="onNextButtonClicked"
                android:textColor="#FFFF"
...
